--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
     "db:seed": "node src/db/seed.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
     "postgres": "^3.4.7",
     "winston": "^3.11.0"
