--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "farmfi-backend",
+  "name": "farmfi-backend-clean",
   "version": "1.0.0",
-  "description": "Backend for FarmFi farmer data management platform",
+  "description": "FarmFi Clean Backend - Smart Farm Management System",
   "type": "module",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "jest",
-    "db:migrate": "node src/db/migrate.js",
-    "db:seed": "node src/db/seed.js"
+    "dev": "node --watch src/server.js"
   },
+  "keywords": [
+    "farm",
+    "agriculture",
+    "disease-detection"
+  ],
+  "author": "FarmFi Team",
+  "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
-    "bcryptjs": "^2.4.3",
+    "aws-sdk": "^2.1498.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
-    "node-fetch": "^3.3.2",
-    "pg": "^8.11.3",
-    "postgres": "^3.4.7",
-    "winston": "^3.11.0"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
+    "multer": "^1.4.5-lts.1",
+    "postgres": "^3.4.3",
+    "xlsx": "^0.18.5"
   }
 }
